--- a/index.html
+++ b/index.html
@@ -242,28 +242,32 @@
       overflow: hidden;
       box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
       margin: 30px 0;
+      font-size: 0.9rem;
     }
 
     table th {
       background: linear-gradient(135deg, #667eea, #764ba2);
       color: white;
-      padding: 20px;
+      padding: 15px 10px;
       font-weight: 700;
-      font-size: 1.1rem;
+      font-size: 1rem;
       text-align: left;
       position: relative;
+      word-wrap: break-word;
     }
 
     table td {
-      padding: 18px 20px;
+      padding: 15px 10px;
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
       transition: all 0.3s ease;
       position: relative;
+      word-wrap: break-word;
+      vertical-align: top;
     }
 
     table tbody tr:hover td {
       background: rgba(255, 255, 255, 0.05);
-      transform: scale(1.02);
+      transform: scale(1.01);
     }
 
     table tbody tr:last-child td {
